--- a/components/navbar.html
+++ b/components/navbar.html
@@ -5,7 +5,7 @@
       <ul class="nav-links">
         <li><a href="../index.html">Home</a></li>
         <li><a href="../pages/products.html">Cleats</a></li>
-        <li><a href="../pages/about.html">About</a></li>
+        <li><a href="../pages/about.html">About Us</a></li>
         <li><a href="../pages/contact.html">Contact</a></li>
         <li><a href="../pages/login.html">Login</a></li>
         <li><a href="../pages/cart.html">Cart</a></li>
