--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -5,7 +5,7 @@
     margin: auto;
 }
 
-.auto-header
+.about-header
 {
     display: flex;
     justify-content: space-between;
@@ -19,8 +19,8 @@
     display: block;
     margin: 0 auto;
     box-shadow: 15px 15px 25px rgba(0, 0, 0, 0.3);
-    height: 20%;
     width: 100%;
+    height: 400px;
 }
 
 .about-pics
