--- a/assets/css/user-reg.css
+++ b/assets/css/user-reg.css
@@ -64,4 +64,31 @@ label
 
 }
 
+.submit_button
+{
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    background-color: rgb(185, 0, 0);
+    color: white;
+    height: 40px;
+    width: 80px;
+    font-size: 20px;
+    font-family:Arial, Helvetica, sans-serif;
+    border-radius: 2px;
+    
+}
+
+.submit_button:hover
+{
+    background-color: rgb(134, 2, 2);
+}
+
+.error
+{
+    color: red;
+    font-size: 20px;
+    margin-left: 10px;
+}
+
 
