Added connection for products and product details page

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,10 +1,10 @@
 <!-- components/navbar.html -->
 <nav class="navbar">
     <div class="navbar-container">
-      <a href="../index.html" class="logo">Elite Cleats</a>
+      <a href="../index.php" class="logo">Elite Cleats</a>
       <ul class="nav-links">
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../pages/products.html">Cleats</a></li>
+        <li><a href="../index.php">Home</a></li>
+        <li><a href="../pages/products.php">Cleats</a></li>
         <li><a href="../pages/about.html">About Us</a></li>
         <li><a href="../pages/contact.html">Contact</a></li>
         <li><a href="../pages/login.html">Login</a></li>
