--- a/assets/css/product-details.css
+++ b/assets/css/product-details.css
@@ -54,7 +54,7 @@
 .product-info .price {
   font-size: 1.3rem;
   font-weight: bold;
-  color: #e60000;
+  color: black;
   margin-bottom: 15px;
 }
 
