Added registration page to backend

--- a/components/footer.html
+++ b/components/footer.html
@@ -5,7 +5,7 @@
       <p>
         <a href="../pages/about.html">About Us</a> |
         <a href="../pages/contact.html">Contact</a> |
-        <a href="../pages/admin.html">Admin Panel</a>
+        <a href="../pages/admin.php">Admin Panel</a>
       </p>
     </div>
   </footer>
