--- a/components/navbar.html
+++ b/components/navbar.html
@@ -7,7 +7,7 @@
         <li><a href="../pages/products.php">Cleats</a></li>
         <li><a href="../pages/about.html">About Us</a></li>
         <li><a href="../pages/contact.html">Contact</a></li>
-        <li><a href="../pages/login.html">Login</a></li>
+        <li><a href="../pages/login.php">Login</a></li>
         <li><a href="../pages/cart.html">Cart</a></li>
       </ul>
     </div>
