Removed admin panel access from footer

--- a/components/footer.html
+++ b/components/footer.html
@@ -4,8 +4,6 @@
       <p>&copy; 2025 Elite Cleats – Founded in Bolivia</p>
       <p>
         <a href="../pages/about.html">About Us</a> |
-        <a href="../pages/contact.html">Contact</a> |
-        <a href="../pages/admin.php">Admin Panel</a>
-      </p>
+        <a href="../pages/contact.html">Contact</a>
     </div>
   </footer>
